#===============================================================================
# Makefile.am : automake input
#===============================================================================

noinst_DATA = \
	ara_thaliana.mat \
	sch_pombe.mat \
	ara_thaliana.intslist.dat \
	ara_thaliana.protlist.dat

noinst_SCRIPTS = \
	test1.sh \
	test2.sh \
	test3.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

